# dan_toropov_cw_3

./: .gitignore  README.md  main.py  pyproject.toml
src/: account_transactions.py  last_transactions.py  settings.py  transactions.py
src/data/: operations.json
tests/: test_last_transactions.py
